test/spec_vectors/f32/fail/module_2.wat
(module (func (result f32) (f32.div (i64.const 0) (f64.const 0))))